# Kremer_project

./: .gitignore  create_df_kremer.ipynb  kremer_project.ipynb  pyproject.toml
csv/: books.csv
notebooks/: Untitled.ipynb  Untitled2.ipynb  cluster_df_binary.csv  image_programs_clean.ipynb
src/kremer_project/: __init__.py
text/: text.typ
