[project]
name = "kremer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nogashlomi", email = "noga.shlomi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.5",
    "pandas>=2.2.3",
]

[project.scripts]
kremer-project = "kremer_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
