[project]
name = "kremer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nogashlomi", email = "noga.shlomi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "practicalsparql>=0.0.6",
    "seaborn>=0.13.2",
]

[project.scripts]
kremer-project = "kremer_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
